syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "DungeonEntryInfo.proto";

// CmdId: 931
// EnetChannelId: 0
// EnetIsReliable: true
message DungeonEntryInfoRsp {
	int32 retcode = 14;
	uint32 point_id = 9;
	repeated DungeonEntryInfo dungeon_entry_list = 10;
	uint32 recommend_dungeon_id = 4;
}
